[metadata]
name = pipim
author = Tina
description = A drop-in replacement for pip
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/pip-improved

[options]
py_modules = pipim

[options.entry_points]
console_scripts =
	pipim = pipim:main

